Efficient blob sync: only process new games, persist Elos

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "crons": [
     {
-      "path": "/api/cron/blob-sync",
+      "path": "/api/cron/blob-sync-simple",
       "schedule": "0 */4 * * *"
     }
   ]
