--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vercel/blob": "^2.0.0",
+    "firebase-admin": "^12.7.0",
     "firebase": "^12.7.0",
     "next": "16.1.0",
     "react": "19.2.3",
